kustomize/base/base.yaml
---
# Source: ochami-power-control/charts/cray-service/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ochami-power-control
  labels:
    app.kubernetes.io/name: ochami-power-control
    helm.sh/base-chart: cray-service-12.0.0
    helm.sh/chart: unknown-chart-name-unknown-chart-version
    app.kubernetes.io/instance: riptide
    app.kubernetes.io/managed-by: Helm
    
  annotations:
    cray.io/service: ochami-power-control
    
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      name: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: ochami-power-control
    app.kubernetes.io/instance: riptide
---
# Source: ochami-power-control/charts/cray-service/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ochami-power-control
  labels:
    app.kubernetes.io/name: ochami-power-control
    helm.sh/base-chart: cray-service-12.0.0
    helm.sh/chart: unknown-chart-name-unknown-chart-version
    app.kubernetes.io/instance: riptide
    app.kubernetes.io/managed-by: Helm
    
  annotations:
    cray.io/service: ochami-power-control
    
spec:
  replicas: 3
  strategy:
    
    rollingUpdate:
      maxUnavailable: 50%
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: ochami-power-control
      app.kubernetes.io/instance: riptide
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ochami-power-control
        app.kubernetes.io/instance: riptide
        
      annotations:
        service.cray.io/public: "true"
        traffic.sidecar.istio.io/excludeOutboundPorts: 2379,2380
    spec:
      
      serviceAccountName: "jobs-watcher"
      containers:
      - name: ochami-power-control
        image: artifactory.algol60.net/csm-docker/stable/ochami-power-control:2.13.0
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 28007
            name: http
        livenessProbe:
          httpGet:
            path: /v1/liveness
            port: 28007
          initialDelaySeconds: 15
          periodSeconds: 5
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /v1/readiness
            port: 28007
          initialDelaySeconds: 30
          periodSeconds: 60
          timeoutSeconds: 25
        volumeMounts:
          - mountPath: /usr/local/cray-pki
            name: cray-pki-cacert-vol
        resources:
          limits:
            cpu: "4"
            memory: 4Gi
          requests:
            cpu: 500m
            memory: 256Mi
        securityContext:
          runAsUser: 65534
          runAsGroup: 65534
          runAsNonRoot: true
      
      
      
      
      volumes:
        - configMap:
            name: cray-configmap-ca-public-key
          name: cray-pki-cacert-vol
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                - ochami-power-control
            topologyKey: kubernetes.io/hostname
---
# Source: ochami-power-control/charts/cray-service/templates/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "ochami-power-control"
  labels:
    app.kubernetes.io/name: ochami-power-control
    helm.sh/base-chart: cray-service-12.0.0
    helm.sh/chart: unknown-chart-name-unknown-chart-version
    app.kubernetes.io/instance: riptide
    app.kubernetes.io/managed-by: Helm
    
spec:
  hosts:
    - "*"
  gateways:
    - services-gateway
    - customer-admin-gateway
  http:
    - match:
        - uri:
            prefix: "/apis/power-control/v1/"
      rewrite:
        uri: "/v1/"
      route:
        - destination:
            host: "ochami-power-control"
            port:
              number: 80
